--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@ Which give the house his special relax ambiance.
                 />
                 <div class="details">
                   <h3><a href="speaker-details.html">Alice</a></h3>
-                  <p>Returning for her second year in a row, a now veteran raver Alice has elected to bring her Player 2 for 2024. Chaos sure to ensue.</p>
+                  <p>Returning for her second year in a row, a now veteran raver Alice is coming at this holiday with BDE.</p>
                   <div class="social">
                     <a href=""><i class="bi bi-twitter"></i></a>
                     <a href=""><i class="bi bi-facebook"></i></a>
